@@ -2306,16 +2306,16 @@ def EncodingConverter_CanConvert(*args, **kwargs):
     return _gdi_.EncodingConverter_CanConvert(*args, **kwargs)
 
 #----------------------------------------------------------------------------
-# wxGTK sets the locale when initialized.  Doing this at the Python
-# level should set it up to match what GTK is doing at the C level.
-if wx.Platform == "__WXGTK__":
-    try:
-        import locale
-        locale.setlocale(locale.LC_ALL, "")
-    except:
-        pass
+## # wxGTK sets the locale when initialized.  Doing this at the Python
+## # level should set it up to match what GTK is doing at the C level.
+## if wx.Platform == "__WXGTK__":
+##     try:
+##         import locale
+##         locale.setlocale(locale.LC_ALL, "")
+##     except:
+##         pass
 
-# On MSW add the directory where the wxWindows catalogs were installed
+# On MSW add the directory where the wxWidgets catalogs were installed
 # to the default catalog path.
 if wx.Platform == "__WXMSW__":
     import os
